# DnDn-App

./: .dockerignore  .gitignore  README.md  api-specs.md
apps/api/: .env.example  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements-test.txt  requirements.txt
apps/api/routers/: auth.py  dashboard.py  documents.py
apps/api/schemas/: documents.py
apps/api/src/: database.py  main.py  models.py
apps/api/src/routers/: admin_companies.py  auth.py  dashboard.py  documents.py  github.py  hr_company.py  hr_departments.py  hr_deps.py  hr_users.py  internal.py  org.py  report_settings.py  reports.py  slack.py  (+2 more)
apps/api/tests/: conftest.py  test_dashboard.py  test_documents.py  test_hr_departments.py  test_hr_users.py  test_internal.py  test_org.py
apps/report/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/report/src/: ai_generator.py  database.py  main.py  makejob.py  models.py  opa_engine.py  s3_client.py  schemas.py  sqs_worker.py  terraform_generator.py
apps/report/tests/: test_ai_generator.py  test_generators.py  test_opa_engine.py  test_schemas.py  test_terraform_generator.py
apps/report/ui/: .env.example  package-lock.json
apps/worker/: Dockerfile  IAM_ONBOARDING.md  PR4_APPLY.md  README.md  README_A_MVP.md  pyproject.toml  requirements.txt
apps/worker/dndn_worker/: consumer.py  run_job.py  s3_uploader.py
apps/worker/iam_templates/: customer_permissions_policy.json  customer_trust_policy.json
apps/worker/tests/: test_consumer.py  test_render_iam_templates.py  test_s3_uploader.py
apps/worker/tools/: render_iam_templates.py  run_payload.py  smoke_assume_role.py  smoke_cloudtrail.py
(+153 files in other folders)
