[project]
name = "dndn-api"
version = "0.1.0"
description = "DnDn API Server - Document & Auth"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "pymysql",
    "python-jose[cryptography]",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
