[project]
name = "dndn-report"
version = "0.1.0"
description = "DnDn Report Builder - AI 보고서 생성"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.3.0",
    "cachetools>=5.3.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "python-hcl2>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
