[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dndn-worker"
version = "0.1.0"
description = "DnDn worker package (Collector/Normalizer) for AWS data collection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "jsonschema>=4.22",
  "prometheus-client>=0.20.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dndn_worker*"]
